--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,36 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.8</version>
+				<configuration>
+					<excludes>
+						<exclude>**/DemoApplication.class</exclude>
+						<exclude>**/config/*.class</exclude>
+						<exclude>**/constant/*.class</exclude>
+						<exclude>**/controller/*.class</exclude>
+						<exclude>**/domain/**/*.class</exclude>
+						<exclude>**/repository/*.class</exclude>
+						<exclude>**/security/*.class</exclude>
+					</excludes>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
