--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.password=12345678
 spring.datasource.driverClassName=org.h2.Driver
 
 spring.jpa.show-sql=true
@@ -9,4 +9,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-ui
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
