--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://54.84.135.87:5432/db_dev
-spring.datasource.username=user
-spring.datasource.password=password
 
-
-spring.datasource.initialization-mode=always
-spring.datasource.initialize=true
-spring.datasource.continue-on-error=true
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-ui
