--- a/dev.env
+++ b/dev.env
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://postgres:5432/db_dev
+spring.datasource.url=jdbc:postgresql://postgres2:5432/db_dev
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=user
 spring.datasource.password=password
